# KNearestAndSVM

./: .gitignore  CMakeLists.txt  Makefile  common.hpp  digit.cpp  facedetect.cpp  image_source.cpp  image_source.hpp  knearest_and_svm.cpp  main.cpp  train_hog.cpp
data/: KNearestDigit.xml  SVMDigit.xml
